--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,19 @@
             <version>1.4.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.spray</groupId>
+            <artifactId>spray-json_2.10</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-client</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+
+
     </dependencies>
 
 
